# Rust-SDL-OpenGL

./: .gitignore  Cargo.toml  build.rs
src/: main.rs  triangle.frag  triangle.vert
